--- a/src/app/employee/create-employee.component.html
+++ b/src/app/employee/create-employee.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="employeeForm" (ngSubmit)="onSubmit()" class="form-horizontal">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h3 class="panel-title">Create Employee</h3>
+      <h3 class="panel-title">{{ panelTitle }}</h3>
     </div>
     <div class="panel-body">
       <div class="form-group" [ngClass]="{'has-error': formErrors.fullName}">
@@ -38,7 +38,8 @@
         <div class="form-group" [ngClass]="{'has-error': formErrors.confirmEmail || formErrors.emailGroup}">
           <label class="col-sm-2 c control-label" for="confirmEmail">Confirm Email</label>
           <div class="col-md-8">
-            <input type="text" class="form-control" id="confirmEmail" formControlName="confirmEmail" (blur)="logValidationErrors()">
+            <input type="text" class="form-control" id="confirmEmail" formControlName="confirmEmail"
+              (blur)="logValidationErrors()">
             <span class="help-block" *ngIf="formErrors.confirmEmail || formErrors.emailGroup">
               {{formErrors.confirmEmail ? formErrors.confirmEmail : formErrors.emailGroup }}
             </span>
@@ -55,60 +56,69 @@
         </div>
       </div>
       <div class="well">
-          <div class="form-group">
-              <div class="col-md-offset-2 col-md-4">
-                <button type="button" class="btn btn-primary" (click)="addSkillButtonClick()">Add Skills </button>
+        <div class="form-group">
+          <div class="col-md-offset-2 col-md-4">
+            <button type="button" class="btn btn-primary" (click)="addSkillButtonClick()" [disabled]="employeeForm.get('skills').invalid">Add Skills </button>
+          </div>
+        </div>
+        <div formArrayName="skills" *ngFor="let skill of employeeForm.get('skills').controls; let i = index">
+          <hr *ngIf="i>0">
+          <div [formGroupName]="i">
+            <div class="form-group"
+              [ngClass]="{'has-error': (skill.get('skillName').invalid && skill.get('skillName').touched)}">
+              <label class="col-sm-2 control-label" [attr.for]="'skillName'+i">Skills</label>
+              <div class="col-sm-4">
+                <input type="text" placeholder="Name" [id]="'skillName'+i" formControlName="skillName"
+                  class="form-control" />
+                <span class="help-block"
+                  *ngIf="(skill.get('skillName').errors?.required && (skill.get('skillName').touched))">
+                  Skill Name is required.
+                </span>
+              </div>
+              <div class="col-sm-6" *ngIf="employeeForm.get('skills').length > 1">
+                <button type="button" class="btn btn-danger btn-sm pull-right" title="Delete Skill" (click)="removeSkillButtonClick(i)">
+                  <span class="glyphicon glyphicon-remove"></span>
+                </button>
               </div>
             </div>
-        <div formArrayName="skills" *ngFor="let skill of employeeForm.get('skills').controls; let i = index">
-            <div [formGroupName]="i">
-                <div class="form-group" [ngClass]="{'has-error': (skill.get('skillName').invalid && skill.get('skillName').touched)}">
-                  <label class="col-sm-2 control-label" [attr.for]="'skillName'+i">Skills</label>
-                  <div class="col-sm-4">
-                    <input type="text" placeholder="Name" [id]="'skillName'+i" formControlName="skillName" class="form-control"
-                      (blur)="logValidationErrors()" />
-                    <span class="help-block" *ngIf="(skill.get('skillName').errors.required && skill.get('skillName').touched)">
-                      {{formErrors.skillName}}
-                    </span>
-                  </div>
-                </div>
-                <div class="form-group" [ngClass]="{'has-error': (skill.get('experienceInYears').invalid && skill.get('experienceInYears').touched)}">
-                  <label class="col-sm-2 control-label" [attr.for]="'experienceInYears'+i">Experience</label>
-                  <div class="col-sm-4">
-                    <input type="text" placeholder="Experience in Year" [id]="'experienceInYears'+i"
-                      formControlName="experienceInYears" class="form-control" (blur)="logValidationErrors()" />
-                    <span class="help-block" *ngIf="(skill.get('experienceInYears').errors.required && skill.get('experienceInYears').touched)">
-                      {{formErrors.experienceInYears}}
-                    </span>
-                  </div>
-                </div>
-                <div class="form-group" [ngClass]="{'has-error': (skill.get('proficiency').invalid && skill.get('proficiency').touched)}">
-                  <label class="col-md-2 control-label">Proficiency</label>
-                  <div class="col-md-8">
-                    <label class="radio-inline">
-                      <input type="radio" id="proficiency" value="beginer" formControlName="proficiency"
-                        (blur)="logValidationErrors()">Beginer
-                    </label>
-                    <label class="radio-inline">
-                      <input type="radio" id="proficiency" value="intermediate" formControlName="proficiency"
-                        (blur)="logValidationErrors()">Intermediate
-                    </label>
-                    <label class="radio-inline">
-                      <input type="radio" id="proficiency" value="advanced" formControlName="proficiency"
-                        (blur)="logValidationErrors()">Advanced
-                    </label>
-                    <span class="help-block" *ngIf="(skill.get('proficiency').errors.required && skill.get('proficiency').touched)">
-                      {{formErrors.proficiency}}
-                    </span>
-                  </div>
-                </div>
+            <div class="form-group"
+              [ngClass]="{'has-error': (skill.get('experienceInYears').invalid && skill.get('experienceInYears').touched)}">
+              <label class="col-sm-2 control-label" [attr.for]="'experienceInYears'+i">Experience</label>
+              <div class="col-sm-4">
+                <input type="text" placeholder="Experience in Year" [id]="'experienceInYears'+i"
+                  formControlName="experienceInYears" class="form-control" />
+                <span class="help-block"
+                  *ngIf="(skill.get('experienceInYears').errors?.required && skill.get('experienceInYears').touched)">
+                  Experience is required.
+                </span>
               </div>
+            </div>
+            <div class="form-group"
+              [ngClass]="{'has-error': (skill.get('proficiency').invalid && skill.get('proficiency').touched)}">
+              <label class="col-md-2 control-label">Proficiency</label>
+              <div class="col-md-8">
+                <label class="radio-inline">
+                  <input type="radio" id="proficiency" value="beginer" formControlName="proficiency">Beginer
+                </label>
+                <label class="radio-inline">
+                  <input type="radio" id="proficiency" value="intermediate" formControlName="proficiency">Intermediate
+                </label>
+                <label class="radio-inline">
+                  <input type="radio" id="proficiency" value="advanced" formControlName="proficiency">Advanced
+                </label>
+                <span class="help-block"
+                  *ngIf="(skill.get('proficiency').errors?.required && skill.get('proficiency').touched)">
+                  Proficiency is required.
+                </span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
     <div class="panel-footer">
       <div class="btn-toolbar">
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-primary" [disabled]="employeeForm.invalid"> Save</button>
         <button type="button" class="btn btn-primary" (click)="onLoadDataClick()">Load Data</button>
         <button type="button" class="btn btn-primary" (click)="onDisableClick()">Disable</button>
       </div>
