--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="container">
   <nav class="navbar navbar-default">
     <ul class="nav navbar-nav">
+        <li>
+            <a [routerLink]="[ '/home' ]" routerLinkActive="active">Home</a>
+          </li>
       <li>
         <a [routerLink]="[ '/list' ]" routerLinkActive="active">List</a>
       </li>
