Lazy loaded, eager loaed, prerender modules

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,10 @@
             <a [routerLink]="[ '/home' ]" routerLinkActive="active">Home</a>
           </li>
       <li>
-        <a [routerLink]="[ '/list' ]" routerLinkActive="active">List</a>
+        <a [routerLink]="[ '/employee' ]" routerLinkActive="active">List</a>
       </li>
       <li>
-        <a [routerLink]="[ '/create' ]" routerLinkActive="active">Create</a>
+        <a [routerLink]="[ '/employee/create' ]" routerLinkActive="active">Create</a>
       </li>
     </ul>
   </nav>
